fix: unaligned archive list
Repalce fonts with fixed-width web safe font Monaco.

For more refer to http://www.ruanyifeng.com/blog/2008/06/typography_notes.html.

--- a/css/wab.css
+++ b/css/wab.css
@@ -250,7 +250,7 @@ h6 {
 
 .date {
     color: #858585;
-    font-family: Lato, Helvetica Neue For Number, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Monaco;
 }
 
 .fa-calendar {
